--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About</a>
+              <a class="nav-link active" href="/iCoderbootstrap/about.html">About</a>
             </li>
 
             <li class="nav-item dropdown">
