--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/iCoderbootstrap/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/iCoderbootstrap/about.html">About</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -62,7 +62,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact us</a>
+              <a class="nav-link" href="/iCoderbootstrap/contact.html">Contact us</a>
             </li>
           </ul>
           <form class="d-flex">
