--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/contact.html">Contact us</a>
+              <a class="nav-link active" href="/iCoderbootstrap/contact.html">Contact us</a>
             </li>
           </ul>
           <form class="d-flex">
