--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link active" aria-current="page" href="/iCoderbootstrap/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iCoderbootstrap/about.html">About</a>
+              <a class="nav-link" href="/iCoder/about.html">About</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -62,7 +62,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iCoderbootstrap/contact.html">Contact us</a>
+              <a class="nav-link" href="/iCoder/contact.html">Contact us</a>
             </li>
           </ul>
           <form class="d-flex">
