--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link active" aria-current="page" href="/iCoderbootstrap/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iCoder/about.html">About</a>
+              <a class="nav-link" href="/https://kaurn6538.github.io/about.html">About</a>
             </li>
 
             <li class="nav-item dropdown">
